fix: menu card text overflow

--- a/assets/style/menu.scss
+++ b/assets/style/menu.scss
@@ -127,4 +127,5 @@ padding: 2px 3px;
 
 .card:hover .price {
   transform: translateX(-59px);
+  margin-left: 65px;
 }
